# pinguinos

./: README.md  pyproject.toml  requirements.txt
notebooks/: client.ipynb  pinguinos.ipynb
notebooks/models/: decision_tree_model.pkl  knn_model.pkl  logistic_regression_model.pkl
pinguinos/models/: decision_tree_model.pkl  knn_model.pkl  logistic_regression_model.pkl  svm_model.pkl
pinguinos/services/: decision_tree_service.py  knn_service.py  logistic_regression_service.py  svm_service.py
pinguinos/trainings/: data_preprocessing.py  train_decision_tree.py  train_knn.py  train_logistic_regression.py  train_svm.py
