[tool.poetry]
name = "pinguinos"
version = "0.1.0"
description = "Clasificación de pinguinos"
authors = ["Alejandro Ocaña <alejandro.ocana.garcia.1988@gmail.com>"]
packages = [{include = "pinguinos"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5"
numpy = "^1.24"
seaborn = "^0.12"
scikit-learn = "^1.3"
flask = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"